@startuml classdiagram
    Titre -- Compte
    Utilisateur -- Compte
    TitreBean -- Titre
    UtilisateurBean -- Utilisateur

    TitreService -- TitreBean
    TitreRessource -- TitreService
    UtilisateurService -- UtilisateurBean
    UtilisateurRessource -- UtilisateurService


    class Titre {
        String nomEntreprise
        String mnemonique
        Double cours 
        Integer variation
        Date dateCours
    }

    class Compte {
        Long id
        Double solde
        List<Titre> titres
    }

    class Utilisateur {
        Long id
        String nom
        Compte compte
    }

    class TitreBean {
        List<Titre> titres

        + modifier(List<Titre> listAjour)
        + Titre trouverParMnemonique(String mnemonique)
        + List<Titre> rechercheMnemonique(String mnemonique)
    }

    class UtilisateurBean {
        List<Utilisateur> utilisateurs

        + Utilisateur ajouter(Utilisateur aAjouter)
        + Utilisateur supprimer(Utilisateur aSupprimer)
        + Utilisateur modifier(Utilisateur aModifier)
        + Utilisateur trouverParId(String idUtilisateur)
    }

    Class TitreService {
        + ListTitre consulterTitre(String mnemonique)
        + List<Titre> rechercheMnemonique(String mnemonique)

        - JMS mAJListTitre()
    }

    class TitreRessource {
        GET consulterTitre()
        GET rechercheMnemonique()

    }
    note left: Endpoint REST

    Class UtilisateurService {
        + Utilisateur ajouterUtilisateur(data)
        + Utilisateur supprimerUtilisateur(data)
        + Titre acheterAction(data)

        + Utilisateur debiter(Integer aDebiter, Utilisateur aCrediter)
        + Utilisateur crediter(Integer aCrediter, Utilisateur aDebiter)
        + Utilisateur consulterPositions(Long idUtilisateur)
        + Utilisateur ajouterTitre(Titre aAjouter, Utilisateur aModifier)
        + Utilisateur supprimerTitre(Titre aSupprimer, Utilisateur aModifier)

        - JMS mettreVenteAction(data)
        - JMS transfererArgent(Double aTransferer)
        - JMS transfererTitre(Double aTransferer)
        - JMS recpetionnerTitre(Double aTransferer)
        - JMS receptionnerArgent(Double aTransferer)
    }

    class UtilisateurRessource {
        POST ajouterUtilisateur()
        DELETE supprimerUtilisateur()
        POST acheterAction()
        POST mettreVenteAction()
        GET consulterPosition()
    }
    note right: Endpoint REST 

@enduml